<resources>
    <string name="ruanjianapp_mingzi">TuPréstamoYa</string>
    <string name="lianshupeizhi_id">1441412443934466</string>
    <string name="lianshu_kehuduan_token" translatable="false">92bc2f50b4d60d4f556b87e50a791fe6</string>
    <string name="ziyuanasse_zhuangment">
         [{
         "include":"https://peru.prestamomio.com/.well-known/assetlinks.json"
         }]
    </string>
    <string name="tusitishi_dizih_00">La red es anormal, intente nuevamente</string>
    <string name="tusitishi_dizih_01">El número de teléfono es anormal, vuelva a ingresar</string>
    <string name="tusitishi_dizih_17">Por favor, cargue su ID primero</string>
    <string name="tusitishi_dizih_04">Por favor llene toda la información</string>
    <string name="tusitishi_dizih_04face">Suba la foto de cara</string>
    <string name="tusitishi_dizih_05">Error de formato de correo electrónico, vuelva a ingresar</string>
    <string name="tusitishi_dizih_06">Por favor seleccione un contacto diferente</string>
    <string name="tusitishi_dizih_07">Por favor complete la misma información</string>
    <string name="tusitishi_dizih_12">Vaya a la configuración del teléfono para modificar los permisos.</string>
    <string name="tusitishi_dizih_13">Copia exitosa</string>
    <string name="geshizhuanyi_jsl_form">S/ %.2f</string>
    <string name="geshizhuanyi_jsl_form2">S/ %.0f</string>
    <string name="geshizhuanyi_jsl_form3">S/ %s</string>
    <string name="geshizhuanyi_jsl_form4">S/</string>
    <string name="geshizhuanyi_jsl_form5">%.2f</string>
    <string name="geshizhuanyi_jsl_form6">%.0f</string>
    <string name="yuyxuanze_djsa_xibanya">España</string>
    <string name="yuyxuanze_djsa_bilu">Perú</string>
    <string name="gaozhanghao_pagewenan_volida">Inicie sesión ahora para solicitar su préstamo</string>
    <string name="gaozhanghao_pagewenan_wanchengduibi">Por favor, introduzca su número de teléfono móvil</string>
    <string name="gaozhanghao_pagewenan_jhgd">por favor ingrese el código de verificación</string>
    <string name="gaozhanghao_pagewenan_htrgestg">volver a validar \ncódigo</string>
    <string name="gaozhanghao_pagewenan_zhucejinru">Registrarse</string>
    <string name="gaozhanghao_pagewenan_tishiyinxie">Por favor revisa el</string>
    <string name="gaozhanghao_pagewenan_guojihuazhuaji1">+593</string>
    <string name="gaozhanghao_pagewenan_guojihuazhuaji2">+51</string>
    <string name="gaozhanghao_pagewenan_tuichu">éxito</string>
    <string name="gaozhanghao_pagewenan_yzm2">Código de reserva en</string>
    <string name="gaozhanghao_pagewenan_saltar">Rechazar</string>
    <string name="gaozhanghao_pagewenan_jixu">Aceptar y continuar</string>
    <string name="qxppp_usestr_1">1. INFORMACIÓN PERSONAL QUE RECOPILAMOS</string>
    <string name="qxppp_usestr_2">Recopilamos cierta información personal sobre usted. La información personal que recopilamos puede ser proporcionada por usted directamente (por ejemplo, cuando abre una Cuenta para usar el Servicio a través de la aplicación, o nos proporciona información personal) o por terceros, o puede ser recopilada automáticamente cuando utiliza el App. Podemos recopilar información en diversas formas y para diversos fines (incluidos los fines permitidos por la Ley Aplicable).</string>
    <string name="qxppp_usestr_03">2. Información obtenida de usted o de su dispositivo móvil directamente:</string>
    <string name="qxppp_usestr_04">Cuando se registra y crea una Cuenta con nosotros utilizando la aplicación, debe proporcionarnos cierta información personal, incluido su nombre, identificación nacional, fecha de nacimiento, sexo, antecedentes educativos, religión, fotografía, dirección física, correo electrónico dirección, información de trabajo, estado civil, contacto de emergencia, su número de teléfono, detalles de la tarjeta SIM, información financiera y crediticia (incluidos los detalles de su cuenta de dinero móvil, detalles de la cuenta bancaria y número de verificación bancaria, cuando corresponda) y una identificación de cuenta y / o contraseña que usará para acceder a la aplicación después del registro.</string>
    <string name="qxppp_usestr_05">a.SMS</string>
    <string name="qxppp_usestr_06">TuPréstamoYa lee los mensajes de texto almacenados en su dispositivo, incluida la hora de envío, los datos de contacto, el número de teléfono y el contenido del mensaje de texto. Estos datos se recopilan aunque la aplicación esté cerrada o no se esté utilizando. Nuestra aplicación carga los datos de tus SMS en nuestro servidor https://peru.prestamomio.com/ para la gestión de riesgos y las comprobaciones antifraude. Una vez que la información se utiliza con fines de riesgo y/o puntuación crediticia, se elimina. Nunca compartimos datos con terceros sin tu permiso y la recopilación de SMS se realiza siempre con tu consentimiento.</string>
    <string name="qxppp_usestr_0601">TuPréstamoYa lee los mensajes de texto almacenados en su dispositivo, incluida la hora de envío, los datos de contacto, el número de teléfono y el contenido del mensaje de texto. Estos datos se recopilan aunque la aplicación esté cerrada o no se esté utilizando. Nuestra aplicación carga los datos de tus SMS en nuestro servidor https://peru.prestamomio.com/ para la gestión de riesgos y las comprobaciones antifraude. Una vez que la información se utiliza con fines de riesgo y/o puntuación crediticia, se elimina. Nunca compartimos datos con terceros sin tu permiso y la recopilación de SMS se realiza siempre con tu consentimiento.</string>
    <string name="qxppp_usestr_07">b.contactos</string>
    <string name="qxppp_usestr_08">Permite que la APP obtenga permiso de acceder a tus contactos para detectar referencias y poder completar automáticamente el proceso de solicitud del préstamo. Recopilar información de los contactos sirve para evaluar su riesgo y puntuaje crediticio, como parte de nuestro proceso de préstamo, requerimos referencias del solicitante del préstamo. En este sentido, durante la presentación del formulario en nuestra aplicación, recopilamos su información de contacto para detectar contactos cercanos que le permitan completar automáticamente los datos durante el proceso de solicitud de préstamo.</string>
    <string name="qxppp_usestr_09">La información de contactos se cargará en el servidor   y no se compartirá con ningún tercero.</string>
    <string name="qxppp_usestr_010">c.Registros de llamadas </string>
    <string name="qxppp_usestr_011">Escanearemos y cargaremos la información del registro de llamadas utilizando el protocolo de transferencia de datos más seguro. La información del registro de llamadas solo se utiliza en el proceso de revisión de crédito y no se compartirá con organizaciones de terceros sin su permiso.</string>
    <string name="qxppp_usestr_012">La información de Registros de llamadas se cargará en el servidor   y no se compartirá con ningún tercero.</string>
    <string name="qxppp_usestr_013">d.Cámara y fotos</string>
    <string name="qxppp_usestr_014">Permítanos capturar las imágenes de su documento e imágenes para la solicitud de préstamo.</string>
    <string name="qxppp_usestr_015">e.Ubicación</string>
    <string name="qxppp_usestr_016">La ubicación del usuario ayuda a encontrar y verificar direcciones, lo que ayuda a tomar mejores decisiones de riesgo crediticio y acelera el proceso de "conocer a su cliente" (KYC).</string>
    <string name="qxppp_usestr_017">f.Equipo</string>
    <string name="qxppp_usestr_018">Permítanos recopilar y monitorear la información relevante del hardware de su equipo para establecer su identidad.</string>
    <string name="qxppp_usestr_019">g.Estado del teléfono</string>
    <string name="qxppp_usestr_020">El estado del teléfono solo se usa para registrar y ver información específica. La información proporcionada por el usuario puede ayudarnos a ver mejor cualquier operación no autorizada en este dispositivo, ya que esto nos permitirá detectar mejor el fraude y los riesgos potenciales.</string>
    <string name="qxppp_usestr_021">h.Calendario</string>
    <string name="qxppp_usestr_022">Se usa para recordarle la Su última fecha de cambio es el para evitar el impacto del pago vencido en su crédito.</string>
    <string name="qxppp_usestr_023">i.Almacenamiento de archivos</string>
    <string name="qxppp_usestr_024">Este permiso es necesario para que los estados de cuenta de préstamos de los usuarios se puedan descargar y guardar de forma segura en el teléfono de los usuarios, y para que el usuario pueda cargar los documentos correctos para una aprobación y desembolso más rápidos del préstamo. Además, esto ayuda a proporcionar una experiencia fluida y fluida al usar la aplicación.</string>
    <string name="qxppp_usestr_025">j.Lista de aplicaciones</string>
    <string name="qxppp_usestr_026">Recopilamos la información de metadatos de cada aplicación insgua_cashada, como el nombre de la aplicación, el nombre del paquete, la hora de insgua_cashación, la hora de actualización en su dispositivo para mejorar su evaluación crediticia y crear ofertas personalizadas.</string>
    <string name="qxppp_usestr_027">3. EL USO DE INFORMACIÓN PERSONAL RECOPILADA</string>
    <string name="qxppp_usestr_028">Podemos utilizar la información personal recopilada para cualquiera de los siguientes propósitos, así como para otros fines permitidos por la ley aplicable:</string>
    <string name="qxppp_usestr_029">Podemos usar su información personal:</string>
    <string name="qxppp_usestr_030">● para identificarlo y registrarlo como usuario y para administrar, o verificar su Cuenta como tal;</string>
    <string name="qxppp_usestr_031">● para facilitar o habilitar cualquier verificación que podamos, según nuestro criterio, consideremos necesario antes de que lo registremos como usuario;</string>
    <string name="qxppp_usestr_032">● desembolsar el préstamo y cobrar pagos por su uso del Servicio;</string>
    <string name="qxppp_usestr_033">● para construir modelos de crédito y realizar una calificación crediticia;</string>
    <string name="zhuyetab_waitchek_jutishijian">30–11-2020</string>
    <string name="zhuyetab_ryingzhong_fec">La fecha de pago se cambió a</string>
    <string name="jingogojian_xixithird_par">Para brindarle un buen servicio, active los permisos correspondientes en la configuración del teléfono</string>
    <string name="jingogojian_xixithird_tit">Título</string>
    <string name="shangpins_foryo_mon">Monto a devolver</string>
    <string name="shangpins_foryo_s100">S/ 100</string>
    <string name="shangpins_foryo_fec2">Fecha de pago de tu crédito</string>
    <string name="shangpins_foryo_det">Detalle</string>
    <string name="shangpins_foryo_can2">Cancelar</string>
    <string name="shangpins_foryo_con">Confirmar</string>
    <string name="shangpins_foryo_10s">10s</string>
    <string name="shangpins_foryo_inte2">Intereses</string>
    <string name="shangpins_foryo_can3">Monto recibido</string>
    <string name="shangpins_foryo_mon4">Monto a devolver</string>
    <string name="peizhiandout_egdsgj_coi">Coin Wallet</string>
    <string name="peizhiandout_egdsgj_s300">S/ 300-500</string>
    <string name="peizhiandout_egdsgj_rey">Repay via credit card\nInterest is 0.43%\nInstant loan</string>
    <string name="peizhiandout_egdsgj_apl">Aplica ya</string>
    <string name="zhanzhanbtn_wenan">Regresar</string>
    <string name="newtankuangsi">Sí</string>
    <string name="newtankuangno">No</string>
    <string name="repy_tousuquxiao">Cierre</string>
    <string name="repy_beforetitle">Consejos:</string>
    <string name="repy_before11">1. El reembolso a tiempo puede aumentar el monto y el plazo del próximo préstamo. Además, el próximo monto más alto puede ser hasta </string>
    <string name="repy_before21">2.Si se atrasa el reembolso, se asumirá la responsabilidad legal y se impondrá una multa diaria de</string>
</resources>