<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/wndwbefore_close1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="right"
        android:layout_marginRight="22dp"
        android:src="@mipmap/tognyong_huiseclose"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:background="@drawable/bj_gnngbfvaeeee">
        <TextView
            android:id="@+id/wndwtiqian_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/repy_beforetitle"
            android:textColor="@color/sezhi_argb_a6000000"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textSize="18dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="14dp">
            <TextView
                android:id="@+id/wndwtiqian_before1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repy_before11"
                android:textColor="@color/sezhi_argb_a6000000"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textSize="18dp"/>
            <TextView
                android:id="@+id/wndwtiqian_before2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/repy_before21"
                android:textColor="@color/sezhi_argb_a6000000"
                android:layout_marginBottom="15dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textSize="18dp"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:orientation="horizontal"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/wndwbefore_close2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bj_thgsdthgsfew"
                android:gravity="center"
                android:paddingTop="17dp"
                android:paddingBottom="17dp"
                android:text="@string/repy_tousuquxiao"
                android:textColor="@color/sezhi_argb_baise"
                android:textSize="20dp"
                android:textStyle="bold" />


        </LinearLayout>
    </LinearLayout>

</LinearLayout>