<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bj_gnngbfvaeeee"
    android:orientation="vertical">


    <TextView
        android:id="@+id/newtipsneineirongrong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jingogojian_xixithird_par"
        android:textColor="@color/sezhi_argb_a6000000"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="20dp"
        android:paddingLeft="16dp"
        android:paddingRight="8dp"
        android:paddingTop="16dp"
        android:paddingBottom="49dp"
        android:textSize="18dp"
        android:background="@drawable/bj_ededyuanjiao"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="25dp">

        <TextView
            android:id="@+id/newtipsisisi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bj_efawesgrfae"
            android:gravity="center"
            android:paddingTop="17dp"
            android:paddingBottom="17dp"
            android:text="@string/newtankuangsi"
            android:textColor="@color/sezhi_argb_baise"
            android:textSize="20dp"
            android:textStyle="bold" />

        <View
            android:layout_width="15dp"
            android:layout_height="15dp" />

        <TextView
            android:id="@+id/newtipsnonono"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bj_thgsdthgsfew"
            android:gravity="center"
            android:paddingTop="17dp"
            android:paddingBottom="17dp"
            android:text="@string/newtankuangno"
            android:textColor="@color/sezhi_argb_baise"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>