<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bj_gnngbfvaeeee"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="19dp"
            android:layout_height="20dp"
            android:layout_marginTop="26dp"
            android:layout_marginLeft="12dp"
            android:src="@mipmap/chanpinye_jinetankuang"/>
        <TextView
            android:id="@+id/readDataTopText02"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginLeft="11dp"
            android:layout_weight="1"
            android:layout_marginTop="26dp"
            android:text="@string/shangpins_foryo_det"
            android:textColor="@color/sezhi_argb_FF674F"
            android:textSize="14dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/huiseguanbianniu"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="12dp"
            android:src="@mipmap/tognyong_huiseclose"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/bj_gthgrfegthth"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/ppw_LLbuju_vve23i_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/ppw_rrlbuju_jfi_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shangpins_foryo_mon4"
                    android:textColor="@color/sezhi_argb_989898"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/ppw_txttt_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/shangpins_foryo_s100"
                    android:textColor="@color/sezhi_argb_333333"
                    android:textSize="16dp" />
            </RelativeLayout>

            <View
                android:id="@+id/ppw_viewbuju_Teffi_1"
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <RelativeLayout
                android:id="@+id/ppw_rrlbuju_jfi_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shangpins_foryo_inte2"
                    android:textColor="@color/sezhi_argb_73000000"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/ppw_txttt_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/shangpins_foryo_s100"
                    android:textColor="@color/sezhi_argb_5377D5"
                    android:textSize="16dp" />
            </RelativeLayout>

            <View
                android:id="@+id/ppw_viewbuju_Teffi_2"
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
            <RelativeLayout
                android:id="@+id/ppw_rrlbuju_jfi_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shangpins_foryo_can3"
                    android:textColor="@color/sezhi_argb_989898"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/ppw_txttt_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/shangpins_foryo_s100"
                    android:textColor="@color/sezhi_argb_333333"
                    android:textSize="16dp" />
            </RelativeLayout>

            <View
                android:id="@+id/ppw_viewbuju_Teffi_3"
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
            <RelativeLayout
                android:id="@+id/ppw_rrlbuju_jfi_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_toLeftOf="@+id/ppw_txttt_4"
                    android:text="@string/shangpins_foryo_fec2"
                    android:textColor="@color/sezhi_argb_989898"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/ppw_txttt_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/shangpins_foryo_s100"
                    android:textColor="@color/sezhi_argb_333333"
                    android:textSize="16dp" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingBottom="25dp">

        <TextView
            android:id="@+id/quxiaoquxiao_fjdoj_buyaoquan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bj_efawesgrfae"
            android:gravity="center"
            android:paddingTop="17dp"
            android:paddingBottom="17dp"
            android:text="@string/shangpins_foryo_can2"
            android:textColor="@color/sezhi_argb_baise"
            android:textSize="20dp"
            android:textStyle="bold" />

        <View
            android:layout_width="15dp"
            android:layout_height="15dp" />

        <TextView
            android:id="@+id/gaoding_sure_djdj_yaogeiwo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bj_thgsdthgsfew"
            android:gravity="center"
            android:paddingTop="17dp"
            android:paddingBottom="17dp"
            android:text="@string/shangpins_foryo_con"
            android:textColor="@color/sezhi_argb_baise"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>